# curves_library

./: CMakeLists.txt  README.md  main.cpp  task.txt
curves_lib/: CMakeLists.txt  curves.cpp  curves.h
